...
            self?.pinStackView.addArrangedSubview(pinTextField)
            pinTextField.addTarget(self, action: #selector(textFieldDidChange(_:)), for: .editingChanged)
            // accessibilityIdentifier for UI Testing
            pinTextField.accessibilityIdentifier = "pin_textfield_\(pinTextField.tag)"
        }
        // accessibilityIdentifier for UI Testing
        pinLabel.accessibilityIdentifier = "pin_label"
        confirmButton.accessibilityIdentifier = "confirm_button"
    }

    override open func viewDidLoad() {
        super.viewDidLoad()
        // prepare constraints
        prepareConstraints()
...
